--- a/data/app.css
+++ b/data/app.css
@@ -1,4 +1,5 @@
-@define-color dark #333333;
+@define-color dark #4d4d4d;
+@define-color light #fff;
 @define-color accent_color #1e90ff;
 @define-color accent_color_500 #1e90ff;
 
@@ -7,23 +8,29 @@
      to right,
      @dark 50%,
      alpha(black, 0.25) 1px,
-     @base_color 1px
+     @light 1px
    );
    border: 1px solid alpha(black, 0.25);
    border-radius: 6px;
-   padding: 32px;
+   padding: 22px;
+   box-shadow: 0px 2px 4px 0px rgba(50, 50, 50, 0.25);
+}
+
+.boxed {
+  border-radius: 6px;
+  padding: 18px;
 }
 
 .accented {
   background: alpha(@accent_color, 0.25);
   border: 1px solid alpha(black, 0.25);
   border-radius: 6px;
-  padding: 12px 0;
+  padding: 18px;
 }
 
 .accented-dark {
   background: alpha(shade(@accent_color, 0.85), 0.5);
   border: 1px solid alpha(black, 0.25);
   border-radius: 6px;
-  padding: 12px 0;
+  padding: 18px;
 }
