--- a/data/app.css
+++ b/data/app.css
@@ -34,3 +34,17 @@
 .dark_text {
   color: #333;
 }
+
+.welcome-title {
+  background: @base_color;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px transparent,
+              0 1px 2px transparent;
+}
+
+.welcome-title > *:insensitive {
+  background: @base_color;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px transparent,
+              0 1px 2px transparent;
+}
