--- a/data/app.css
+++ b/data/app.css
@@ -42,7 +42,7 @@
               0 1px 2px transparent;
 }
 
-.welcome-title > *:insensitive {
+.welcome-title > *:disabled {
   background: @base_color;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px transparent,
