--- a/data/app.css
+++ b/data/app.css
@@ -59,3 +59,11 @@
   box-shadow: 0 1px 3px transparent,
               0 1px 2px transparent;
 }
+
+.dialog-grid {
+    background: @base_color;
+}
+
+window {
+    background: @base_color;
+}
