--- a/src/views/colourpane.ui
+++ b/src/views/colourpane.ui
@@ -1,132 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.0 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <template class="IconPreviewColourPane" parent="GtkBox">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <property name="orientation">vertical</property>
     <child>
+      <!-- n-columns=4 n-rows=3 -->
       <object class="GtkGrid" id="sizes">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="halign">center</property>
         <property name="valign">end</property>
         <property name="vexpand">True</property>
-        <property name="row_spacing">10</property>
-        <property name="column_spacing">30</property>
+        <property name="row-spacing">10</property>
+        <property name="column-spacing">30</property>
         <child>
           <object class="GtkImage">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="halign">center</property>
             <property name="valign">end</property>
-            <property name="pixel_size">128</property>
-            <property name="icon_name">com.github.lainsce.icon-preview</property>
+            <property name="pixel-size">128</property>
+            <property name="icon-name">com.github.lainsce.icon-preview</property>
             <style>
-              <class name="icon-dropshadow" />
+              <class name="icon-dropshadow"/>
             </style>
           </object>
           <packing>
-            <property name="left_attach">3</property>
-            <property name="top_attach">0</property>
+            <property name="left-attach">3</property>
+            <property name="top-attach">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label">128</property>
           </object>
           <packing>
-            <property name="left_attach">3</property>
-            <property name="top_attach">1</property>
+            <property name="left-attach">3</property>
+            <property name="top-attach">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkImage">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="halign">center</property>
             <property name="valign">end</property>
-            <property name="pixel_size">64</property>
-            <property name="icon_name">com.github.lainsce.icon-preview</property>
+            <property name="pixel-size">64</property>
+            <property name="icon-name">com.github.lainsce.icon-preview</property>
             <style>
-              <class name="icon-dropshadow" />
+              <class name="icon-dropshadow"/>
             </style>
           </object>
           <packing>
-            <property name="left_attach">2</property>
-            <property name="top_attach">0</property>
+            <property name="left-attach">2</property>
+            <property name="top-attach">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label">64</property>
           </object>
           <packing>
-            <property name="left_attach">2</property>
-            <property name="top_attach">1</property>
+            <property name="left-attach">2</property>
+            <property name="top-attach">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkImage">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="halign">center</property>
             <property name="valign">end</property>
-            <property name="pixel_size">32</property>
-            <property name="icon_name">com.github.lainsce.icon-preview</property>
+            <property name="pixel-size">32</property>
+            <property name="icon-name">com.github.lainsce.icon-preview</property>
             <style>
-              <class name="icon-dropshadow" />
+              <class name="icon-dropshadow"/>
             </style>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">0</property>
+            <property name="left-attach">1</property>
+            <property name="top-attach">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label">32</property>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">1</property>
+            <property name="left-attach">1</property>
+            <property name="top-attach">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkImage">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="halign">center</property>
             <property name="valign">end</property>
-            <property name="pixel_size">16</property>
-            <property name="icon_name">com.github.lainsce.icon-preview-symbolic</property>
+            <property name="pixel-size">16</property>
+            <property name="icon-name">com.github.lainsce.icon-preview-symbolic</property>
             <style>
               <class name="symbolic"/>
-              <class name="icon-dropshadow" />
+              <class name="icon-dropshadow"/>
             </style>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">0</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label">symbolic</property>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">1</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">1</property>
           </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
         </child>
         <style>
           <class name="sizes"/>
@@ -141,31 +154,39 @@
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="vexpand">True</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="orientation">vertical</property>
             <child>
               <object class="GtkBox">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="halign">center</property>
                 <property name="valign">center</property>
+                <property name="margin-start">12</property>
+                <property name="margin-end">12</property>
+                <property name="margin-top">18</property>
+                <property name="margin-bottom">12</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">12</property>
                 <property name="homogeneous">True</property>
-                <property name="margin_bottom">12</property>
                 <child>
                   <object class="GtkBox" id="small">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
+                    <property name="double-buffered">False</property>
                     <property name="halign">center</property>
+                    <property name="margin-left">6</property>
+                    <property name="margin-right">6</property>
+                    <property name="spacing">18</property>
                     <property name="homogeneous">True</property>
-                    <property name="margin_right">6</property>
-                    <property name="margin_left">6</property>
                     <child>
                       <placeholder/>
                     </child>
@@ -185,7 +206,8 @@
                 <child>
                   <object class="GtkBox" id="grid">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
+                    <property name="spacing">12</property>
                     <property name="homogeneous">True</property>
                     <child>
                       <placeholder/>
