--- a/data/ui/style.css
+++ b/data/ui/style.css
@@ -51,7 +51,7 @@ demo-icon {
 }
 
 .exporter .thumbnail {
-	border: 1px solid @borders;
+	border: 1px solid alpha(black, 0.24);
 	padding: 8px;
 	background: @theme_base_color;
 	border-radius: 3px;
@@ -65,4 +65,16 @@ demo-icon {
 .welcome .suggested-action {
   border-radius: 50px;
   padding: 10px;
+}
+
+.welcome .suggested-action-ghost {
+  box-shadow: none;
+  background: none;
+  border: 1px solid @accent_color;
+}
+
+.welcome .suggested-action-ghost:active {
+  box-shadow: none;
+  background: linear-gradient(to bottom, shade(mix(@base_color, @accent_color, 0.5), 1.1) 2px, shade(mix(@base_color, @accent_color, 0.5), 1.1));
+  border: 1px solid shade(@accent_color, 0.88);
 }
