--- a/data/ui/iconsaver.ui
+++ b/data/ui/iconsaver.ui
@@ -6,7 +6,9 @@
     <property name="can-focus">False</property>
     <property name="border-width">0</property>
     <property name="resizable">False</property>
+    <property name="window-position">center-on-parent</property>
     <property name="type-hint">dialog</property>
+    <property name="gravity">center</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
@@ -14,33 +16,40 @@
         <child internal-child="action_area">
           <object class="GtkButtonBox">
             <property name="can-focus">False</property>
-              <child>
-                <object class="GtkButton">
-                  <property name="label" translatable="yes">Close</property>
-                  <property name="visible">True</property>
-                  <property name="can_focus">True</property>
-                  <property name="receives_default">True</property>
-                  <property name="action_name">screenshot.close</property>
-                </object>
-              </child>
-              <child>
-                <object class="GtkButton">
-                  <property name="label" translatable="yes">Save…</property>
-                  <property name="visible">True</property>
-                  <property name="can_focus">True</property>
-                  <property name="can_default">True</property>
-                  <property name="has_default">True</property>
-                  <property name="receives_default">True</property>
-                  <property name="action_name">screenshot.save</property>
-                  <style>
-                    <class name="suggested-action"/>
-                  </style>
-                </object>
-                <packing>
-                  <property name="pack_type">end</property>
-                  <property name="position">1</property>
-                </packing>
-              </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Close</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="action-name">dlg.close</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Save…</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="can-default">True</property>
+                <property name="has-default">True</property>
+                <property name="receives-default">True</property>
+                <property name="action-name">dlg.save</property>
+                <style>
+                  <class name="suggested-action"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="pack-type">end</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -76,6 +85,9 @@
           </packing>
         </child>
       </object>
+    </child>
+    <child type="titlebar">
+      <placeholder/>
     </child>
   </template>
 </interface>
