--- a/data/ui/mainwindow.ui
+++ b/data/ui/mainwindow.ui
@@ -95,8 +95,10 @@
           <object class="GtkStack" id="content">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="vexpand">True</property>
             <property name="hhomogeneous">False</property>
             <property name="vhomogeneous">False</property>
+            <property name="transition-type">slide-left-right</property>
             <property name="interpolate-size">True</property>
             <child>
               <object class="GtkBox">
@@ -119,7 +121,7 @@
                       <object class="GtkImage">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="opacity">0.5</property>
+                        <property name="opacity">0.20</property>
                         <property name="halign">center</property>
                         <property name="valign">center</property>
                         <property name="pixel-size">128</property>
